<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/home" />

    <master.flame.danmaku.ui.widget.DanmakuView
        android:id="@+id/danmu_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/input_lin"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/color_16C3FF"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/main_emotion">

        <ImageView
            android:id="@+id/main_background"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:src="@drawable/emotion" />

        <EditText
            android:id="@+id/main_edit"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:lines="1"
            android:maxLines="1" />

        <TextView
            android:id="@+id/main_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/btn_main"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/main_send"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/main_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/btn_main"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/main_text"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/main_spannable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/btn_main"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/main_spannable"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/main_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/btn_main"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/main_show"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/main_hide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/btn_main"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/main_hide"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/main_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/btn_main"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/main_pause"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/main_resume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/btn_main"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/main_resume"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_emotion"
        android:layout_width="match_parent"
        android:layout_height="216dp"
        android:background="@color/color_BFC6CF"
        android:paddingStart="32dp"
        android:paddingTop="25dp"
        android:paddingEnd="32dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>